# golf-coach

./: .gitignore  README.md  ROADMAP.md  WORKLOG.md  pyproject.toml
data/: README.md
docs/: ARCHITECTURE.md  FLOW.md  M1_CAPTURE_FLOW.md  M4_ANALYSIS_POC.md  M4_FUNDAMENTALS_PANEL.md  M4_POC_PLAN.md  PROJECT_CHARTER.md
docs/decisions/: 000-template.md  001-language-python.md  002-pose-estimation-mediapipe.md  003-camera-hardware.md  004-launch-monitor.md  005-object-detection-yolov8.md  006-mcp-server.md  007-decouple-software-from-hardware.md  008-project-structure.md  009-swing-scoring-model.md  010-benchmark-ranges.md  011-camera-synchronization.md
frontend/: README.md
scripts/: analyze_swing.py  run_mcp_server.py  run_pose.py
spikes/: README.md
src/golf_coach/: __init__.py  config.py
src/golf_coach/analysis/: __init__.py  engine.py  phases.py  scoring.py  smoothing.py
src/golf_coach/api/: __init__.py
src/golf_coach/capture/: __init__.py  file.py  source.py
src/golf_coach/contracts/: __init__.py  detections.py  feedback.py  intent.py  keypoints.py  shot.py  swing.py
src/golf_coach/detection/: __init__.py  detector.py
src/golf_coach/feedback/: __init__.py  rules.py
src/golf_coach/launch_monitor/: __init__.py  mock.py  source.py
src/golf_coach/pose/: __init__.py  estimator.py  overlay.py
tests/: conftest.py
tests/analysis/: conftest.py  test_benchmarks.py  test_checkpoints.py  test_engine.py  test_phases.py  test_scoring.py  test_smoothing.py
tests/capture/: test_file_source.py
tests/contracts/: test_contracts.py
tests/feedback/: test_rules.py
tests/pose/: test_mapping.py
(+6 files in other folders)
